--- a/error-reporting-csharp-dotnet-tool/error-reporting-csharp-dotnet-tool.csproj
+++ b/error-reporting-csharp-dotnet-tool/error-reporting-csharp-dotnet-tool.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<TargetFramework>net5.0</TargetFramework>
 		<RootNamespace>error_reporting_csharp_dotnet_tool</RootNamespace>
 
 		<PackAsTool>true</PackAsTool>
@@ -10,7 +10,7 @@
 		<PackageOutputPath>./nupkg</PackageOutputPath>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<AssemblyName>exasol-error-parser</AssemblyName>
-		<Version>1.0.1</Version>
+		<Version>0.0.0</Version>
 		<EnableNETAnalyzers>true</EnableNETAnalyzers>
 		<Authors>Pieterjan Spoelders</Authors>
 		<Company>Exasol</Company>
@@ -21,6 +21,10 @@
 	  <PackageReference Include="Microsoft.CodeAnalysis" Version="3.9.0" />
 	  <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.9.0" />
 	  <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="3.9.0" />
+	  <PackageReference Include="MinVer" Version="2.5.0">
+	    <PrivateAssets>all</PrivateAssets>
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
 	</ItemGroup>
 
 	<ItemGroup>
