--- a/error-reporting-dotnet-tool-testproject/error-reporting-dotnet-tool-testproject.csproj
+++ b/error-reporting-dotnet-tool-testproject/error-reporting-dotnet-tool-testproject.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>error_reporting_dotnet_tool_testproject</RootNamespace>
   </PropertyGroup>
 
