--- a/error-reporting-csharp-dotnet-tool/error-reporting-csharp-dotnet-tool.csproj
+++ b/error-reporting-csharp-dotnet-tool/error-reporting-csharp-dotnet-tool.csproj
@@ -8,7 +8,7 @@
 		<PackAsTool>true</PackAsTool>
 		<ToolCommandName>exasol-error-parser</ToolCommandName>
 		<PackageOutputPath>./nupkg</PackageOutputPath>
-		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
 		<AssemblyName>exasol-error-parser</AssemblyName>
 		<Version>0.0.0</Version>
 		<EnableNETAnalyzers>true</EnableNETAnalyzers>
