--- a/error-reporting-csharp-dotnet-tool/error-reporting-csharp-dotnet-tool.csproj
+++ b/error-reporting-csharp-dotnet-tool/error-reporting-csharp-dotnet-tool.csproj
@@ -4,9 +4,9 @@
 		<OutputType>Exe</OutputType>
 		<TargetFramework>net5.0</TargetFramework>
 		<RootNamespace>error_reporting_csharp_dotnet_tool</RootNamespace>
-
+		<!--https://docs.microsoft.com/en-us/dotnet/core/tools/global-tools-how-to-create-->
 		<PackAsTool>true</PackAsTool>
-		<ToolCommandName>exasol-error-parser</ToolCommandName>
+		<ToolCommandName>exasol-error-crawler</ToolCommandName>
 		<PackageOutputPath>./nupkg</PackageOutputPath>
 		<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
 		<AssemblyName>exasol-error-parser</AssemblyName>
@@ -19,9 +19,9 @@
 	<ItemGroup>
 	  <PackageReference Include="CommandLineParser" Version="2.8.0" />
 	  <PackageReference Include="Microsoft.Build.Locator" Version="1.4.1" />
-	  <PackageReference Include="Microsoft.CodeAnalysis" Version="3.9.0" />
-	  <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.9.0" />
-	  <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="3.9.0" />
+	  <PackageReference Include="Microsoft.CodeAnalysis" Version="4.0.1" />
+	  <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.0.1" />
+	  <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="4.0.1" />
 	  <PackageReference Include="MinVer" Version="2.5.0">
 	    <PrivateAssets>all</PrivateAssets>
 	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
