--- a/error-reporting-csharp-dotnet-tool/error-reporting-csharp-dotnet-tool.csproj
+++ b/error-reporting-csharp-dotnet-tool/error-reporting-csharp-dotnet-tool.csproj
@@ -13,7 +13,8 @@
 		<Version>0.0.0</Version>
 		<EnableNETAnalyzers>true</EnableNETAnalyzers>
 		<Authors>Pieterjan Spoelders</Authors>
-		<Company>Exasol</Company>
+		<Company>Exasol AG</Company>
+		<RepositoryUrl>https://github.com/exasol/error-crawler-csharp</RepositoryUrl>
 	</PropertyGroup>
 
 	<ItemGroup>
