--- a/.github/workflows/publish-on-tag.yml
+++ b/.github/workflows/publish-on-tag.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Test
       run: dotnet test --no-build --verbosity normal
     - name: pack
-      run: dotnet pack error-reporting-csharp --configuration Release -o package > packageoutput
+      run: dotnet pack --configuration Release > packageoutput
 
     - name: set variable
       run: $cmdOutput = python .\print_package_path.py ; $cmdOutput; echo "NPPATH=$cmdOutput" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf-8 -Append;
